- Added script for generating test data - removed /v1 from massage api path - updated swagger.json - changed placeholder image url
